--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-NAME="com.pixflow.motionfactory"
-BUNDLE_ID="com.pixflow.motionfactory"
+NAME="com.pixflow.textanimator"
+BUNDLE_ID="com.pixflow.textanimator"
 HOSTS="PPRO, AEFT"
 CERTIFICATE_PASSWORD="!pixflowFTW"
 CERTIFICATE_FILENAME="certificate.p12"
