--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^7.2.1",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "^7.2.1",
     "@angular/compiler": "^7.2.1",
     "@angular/core": "^7.2.1",
-    "@angular/cdk": "^7.2.0",
     "@angular/forms": "^7.2.1",
     "@angular/http": "^7.2.1",
     "@angular/platform-browser": "^7.2.1",
     "@angular/platform-browser-dynamic": "^7.2.1",
     "@angular/router": "^7.2.1",
+    "@ngx-progressbar/core": "^5.3.2",
     "@types/smoothscroll-polyfill": "^0.3.0",
     "adm-zip": "^0.4.13",
     "bluebird": "^3.5.3",
