--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NAME="com.pixflow.textanimator"
 BUNDLE_ID="com.pixflow.textanimator"
-HOSTS="PPRO, AEFT"
+HOSTS="AEFT"
 CERTIFICATE_PASSWORD="!pixflowFTW"
 CERTIFICATE_FILENAME="certificate.p12"
 CEF_PARAMS=""
